--- a/css/estilo.css
+++ b/css/estilo.css
@@ -61,6 +61,7 @@ nav ul li a:hover {
 #conteudo {
     width: 710px;
     float: left;
+    margin-bottom: 20px;
 }
 
 aside {
@@ -68,6 +69,7 @@ aside {
     float: right;
     background: #ebe7dd;
     padding-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 section#visita{
@@ -91,6 +93,37 @@ section#galeria a {
 section#galeria img{
     margin-left: 2px;
     margin-top: 3px;
+}
+
+article#video {
+    float: left;
+    width: 310px;
+    margin-left: 25px;
+}
+
+article#mapa {
+    float: left;
+    width: 310px;
+    margin-left: 37px;
+}
+
+article#exposicoes {
+    float: left;
+    width: 310px;
+    margin: 15px 0 0 25px;
+}
+
+article#historia {
+    float: left;
+    width: 310px;
+    margin: 15px 0 0 37px;
+}
+
+h3 {
+    color: #227115;
+    font-size: 1.0em;
+    margin-bottom: 15px;
+    text-transform: uppercase;
 }
 
 h4 {
@@ -127,4 +160,17 @@ fieldset {
 
 legend {
     display: none;
+}
+
+/*Rodapé*/
+
+footer {
+    clear: both;
+    padding: 20px 0 30px 0;
+    text-align: center;
+    background: url(../imagens/fundo-rodape.png) no-repeat center top;
+}
+
+footer>p a {
+    padding: 2px 10px;
 }
